cabal-version:      2.4
name:               cardano-royalties-contracts
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable cardano-royalties-contracts
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
    hs-source-dirs:   app
    default-language: Haskell2010


library
  hs-source-dirs:      src
  exposed-modules:     Trace
                     , Funds
                     , Delegate
                     , Sale 
                    --  , Token 

  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , lens
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , text
                     , tasty
                     , tasty-quickcheck
                     , QuickCheck
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


test-suite plutus-pioneer-program-week08-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:       Spec.Model
                     , Spec.Trace

  default-language: Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:       base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , lens
                     , plutus-contract
                     , plutus-ledger
                     , cardano-royalties-contracts
                     , plutus-tx
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     , text
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any
